<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:id="@+id/profile_user_id"
        android:drawableLeft="@drawable/ic_person"
        android:layout_marginTop="15dp"
        android:hint="@string/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/profile_name"
        android:drawableLeft="@drawable/ic_name"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <EditText
        android:id="@+id/profile_age"
        android:drawableLeft="@drawable/ic_calendar"
        android:layout_marginTop="15dp"
        android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>


    <EditText
    android:id="@+id/profile_password"
    android:drawableLeft="@drawable/ic_lock"
    android:layout_marginTop="15dp"
    android:hint="@string/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"/>

    <EditText
        android:id="@+id/profile_quote"
        android:layout_marginTop="15dp"
        android:hint="@string/quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <Button
        android:id="@+id/profile_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>